--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -68,8 +68,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:21.0.1'
     implementation("org.greenrobot:eventbus:3.3.1")
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation "androidx.activity:activity-ktx:1.4.0"
-    implementation "androidx.fragment:fragment-ktx:1.4.0"
+    implementation 'com.guolindev.permissionx:permissionx:1.7.1'
+
 
 
 
